Added badges; added java options for ledger example